[package]
name = "unreachable_checked"
version = "0.2.0"
authors = ["Hassan Abu-Jabir <hassan@pandaloop.de>"]
license = "MITNFA"
description = "unreachable!()-like macro that causes linking error instead of panicking. May be used to statically ensure some code won't panic."
homepage = "https://github.com/DrSloth/unreachable_checked"
repository = "https://github.com/DrSloth/unreachable_checked"
readme = "README.md"
keywords = ["panic", "static-check", "static_assert", "static-assert"]
categories = ["no-std", "rust-patterns"]

[features]
default = []

# Enables panicking instead of linker failure for debugging purposes
panic = []

[profile.test]
opt-level = 2
